# argoflows

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yaml
examples/: info-api.rs  workflow-api.rs  workflow-template-api.rs
src/: config.rs  lib.rs
src/api/: info.rs  mod.rs  url.rs  workflow.rs  workflow_template.rs
src/config/: mod.rs
src/error/: common.rs  error.rs  info.rs  mod.rs  workflow.rs  workflow_template.rs
src/types/: backoff.rs  info.rs  metadata.rs  mod.rs  retry.rs  retry_affinity.rs  retry_strategy.rs  types.rs
src/types/artifact/: archive_strategy.rs  art_gc_status.rs  artifact.rs  artifact_gc.rs  artifact_gc_spec.rs  artifact_location.rs  artifact_node_spec.rs  artifact_paths.rs  artifact_repository.rs  artifact_repository_ref.rs  artifact_repository_ref_status.rs  artifactory_artifact.rs  artifactory_artifact_repository.rs  azure_artifact.rs  azure_artifact_repository.rs  create_s3_bucket_options.rs  gcs_artifact.rs  gcs_artifact_repository.rs  git_artifact.rs  hdfs_artifact.rs  hdfs_artifact_repository.rs  header.rs  http_artifact.rs  mod.rs  oss_artifact.rs  oss_artifact_repository.rs  oss_lifecycle_rule.rs  raw_artifact.rs  s3_artifact.rs  s3_artifact_repository.rs  s3_encryption_options.rs  tar_strategy.rs
src/types/http/: basic_auth.rs  body_source.rs  client_cert_auth.rs  header.rs  header_source.rs  http.rs  http_auth.rs  mod.rs  oauth2_auth.rs  oauth2_endpoint_param.rs
src/types/metrics/: counter.rs  gauge.rs  histogram.rs  mod.rs  prometheus.rs
src/types/sync/: mod.rs  mutex.rs  mutex_holding.rs  mutex_status.rs  semaphore_holding.rs  semaphore_ref.rs  semaphore_status.rs  synchronization_status.rs
src/types/template/: arguments.rs  cache.rs  container_node.rs  dag_task.rs  (+21 more)
(+43 files in other folders)
