[package]
name = "argoflows"
version = "0.1.0"
edition = "2021"

[dependencies]
k8s-openapi = { version = "0.24.0", features = ["v1_31"] }
reqwest = { version = "0.12.12", features = ["json", "blocking"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
url = "^2.5"
