[package]
name = "argoflows"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
authors = ["Gaurav Gahlot<me@gauravgahlot.in>"]
categories = ["api-bindings", "web-programming::http-client"]
description = "Argoflows lets you seamlessly integrate and manage Argo Workflows directly from your Rust applications."
documentation = "https://docs.rs/argoflows"
keywords = ["argo",  "client", "http", "workflows"]
readme = "README.md"
repository = "https://github.com/gauravgahlot/argoflows"
include = [    
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/**/*",
    "examples/**/*",
]

[dependencies]
k8s-openapi = { version = "0.24.0", features = ["v1_31"] }
reqwest = { version = "0.12.12", features = ["json", "blocking"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
url = "^2.5"
